--- a/multiservicio/package.json
+++ b/multiservicio/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
     "express": "^4.17.1",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.14",
     "morgan": "^1.10.0",
+    "multer-gridfs-storage": "^5.0.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
